isBlank modified with apcheCmmns